[project]
name = "biosensor-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[sqlalchemy,standard]>=2.17.0",
    "pydantic>=2.11.7",
    "asyncpg>=0.29.0",
]


[project.scripts]
server = "src.app.server:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
