[project]
name = "biosensor-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[jwt,sqlalchemy,standard]>=2.17.0",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "email-validator>=2.0.0",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
]


[project.scripts]
server = "app.server:run"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
